# azure-converter

./: .gitignore  CMakeLists.txt  README.md  batch_converter.sh  filescount.py
Docker/: DOCKER-Kinect-Headache  Dockerfile  setup-ubuntu.sh
src/: kinect.cpp
src/classes/: FrameAlignedImages.cpp  FrameConverter.cpp  ProgressBar.cpp  k4a_util.cpp
src/headers/: FRAMECONVERTER_CONSTANTS.h  FrameAlignedImages.h  FrameConverter.h  ProgressBar.h  k4a_util.h
src/headers/indicators/: block_progress_bar.hpp
